@@ -265,13 +265,14 @@
       </p>
 
       <p>
-        When a <code>decap</code> action decapsulates a packet, Open vSwitch
-        raises this error if it does not support the type of inner packet.
-        <code>decap</code> of an Ethernet header raises this error if a VLAN
-        header is present, <code>decap</code> of a NSH packet raises this error
-        if the NSH inner packet is not Ethernet, IPv4, IPv6, or NSH, and
-        <code>decap</code> of other types of packets is unsupported and also
-        raises this error.
+        The <code>decap</code> action is supported only for packet types
+        ethernet, NSH and MPLS. <code>decap</code> of other types of packets is
+        unsupported and also raises this error. When a <code>decap</code>
+        action decapsulates a packet, Open vSwitch raises this error if it
+        does not support the type of inner packet. <code>decap</code> of an
+        Ethernet header raises this error if a VLAN header is present,
+        <code>decap</code> of a NSH packet raises this error if the NSH inner
+        packet is not Ethernet, IPv4, IPv6, or NSH.
       </p>
 
       <p>
@@ -1096,6 +1097,8 @@ for <var>i</var> in [1,<var>n_slaves</var>]:
       <h2>The <code>encap</code> action</h2>
       <syntax><code>encap(nsh(</code>[<code>md_type=<var>md_type</var></code>]<code>, </code>[<code>tlv(<var>class</var>,<var>type</var>,<var>value</var>)</code>]...<code>))</code></syntax>
       <syntax><code>encap(ethernet)</code></syntax>
+      <syntax><code>encap(mpls(ether_type=<var>ether_type</var>))</code>
+      </syntax>
 
       <p>
         The <code>encap</code> action encapsulates a packet with a specified
@@ -1134,6 +1137,12 @@ for <var>i</var> in [1,<var>n_slaves</var>]:
         source and destination are initially zeroed.
       </p>
 
+      <p>
+        The <code>encap(mpls(ethertype=....))</code> variant encapsulates an
+        ethernet or L3 packet with a MPLS header. The <var>ethertype</var>
+        could be MPLS unicast (0x8847) or multicast (0x8848) ethertypes.
+      </p>
+
       <conformance>
         This action is an Open vSwitch extension to OpenFlow 1.3 and later,
         introduced in Open vSwitch 2.8.
@@ -1143,6 +1152,9 @@ for <var>i</var> in [1,<var>n_slaves</var>]:
     <action name="DECAP">
       <h2>The <code>decap</code> action</h2>
       <syntax><code>decap</code></syntax>
+      <syntax><code>decap(packet_type(ns=<var>name_space</var>,
+      type=<var>ethertype</var>))</code></syntax> for decapsulating MPLS
+      packets.
 
       <p>
         Removes an outermost encapsulation from the packet:
@@ -1161,6 +1173,12 @@ for <var>i</var> in [1,<var>n_slaves</var>]:
           revealing the inner packet.  Open vSwitch supports Ethernet, IPv4,
           IPv6, and NSH inner packet types.  Other types raise unsupported
           packet type errors.
+        </li>
+
+        <li>
+          Otherwise, if the packet is a MPLS packet, removes the MPLS header
+          and classifies the inner packet as mentioned in the packet type
+          argument of the decap.
         </li>
 
         <li>
